# computer_graphic_2

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
Resources/: MeshFormat.md  ShaderFormat.md
Resources/Meshes/: Square.mesh  Triangle.mesh
Resources/Shaders/: DumbShader.hlsl  DumbShader.shader
src/: CMakeLists.txt  Main.cpp  MySuper3DApp.cpp
src/Asset/: AssetManager.cpp  AssetManager.h  CMakeLists.txt
src/Asset/Mesh/: MeshAsset.cpp  MeshAsset.h  MeshLoader.cpp
src/Asset/Shader/: ShaderAsset.cpp  ShaderAsset.h  ShaderLoader.cpp
src/Components/: CMakeLists.txt  Component.cpp  Component.h
src/Components/Physics/: CollisionComponent.h
src/Components/Scene/: CMakeLists.txt  SceneComponent.cpp  SceneComponent.h  Transform.h
src/Components/Scene/Render/: MeshComponent.cpp  MeshComponent.h  RenderComponent.cpp  RenderComponent.h  ShaderComponent.cpp  ShaderComponent.h
src/Components/Script/: ScriptComponent.h
src/Engine/: Engine.cpp  Engine.h  SingletonManager.h
src/Game/: Game.cpp  Game.h
src/Input/: InputDevice.cpp  InputDevice.h
src/Object/: CMakeLists.txt  Object.cpp  Object.h
src/Object/Components/: Component.cpp  Component.h
src/Object/Components/Scene/: SceneComponent.cpp  SceneComponent.h  Transform.cpp  Transform.h
src/Object/Components/Scene/Render/: MeshComponent.h  RenderComponent.cpp  RenderComponent.h  ShaderComponent.h
src/Object/GameObject/: Ball.cpp  Ball.h  CMakeLists.txt  GameObject.cpp  GameObject.h  Plank.cpp  Plank.h
src/Object/GameObject/Primitives/: Circle.cpp  Circle.h  Rectangle.cpp  Rectangle.h  RectangleShape.cpp  RectangleShape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/Object/Primitives/: Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
src/Renderer/: RenderManager.cpp  RenderManager.h  Renderable.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Vertex.cpp  Vertex.h
src/Resources/: DumbShader.hlsl
src/Scene/: SceneManager.cpp  SceneManager.h
src/Types/: Colors.h  Types.h  Vertex.h
src/Utils/: CollisionUtils.cpp  CollisionUtils.h  Colors.h  Random.cpp  Random.h  SMath.h  StringUtils.cpp  StringUtils.h
src/Window/: Window.cpp  Window.h
